--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 				</div>
 				<div class="social mt-lg-3 mt-1 ml-auto">
 					<ul>
-						<li class="mr-sm-3 mr-2 icons"><i class="fab fa-researchgate"><a href="https://www.researchgate.net/profile/Satya_Sahoo3"></i></a></li>
+						<li class="mr-sm-3 mr-2 icons"><span class="fab fa-researchgate"><a href="https://www.researchgate.net/profile/Satya_Sahoo3"></span></a></li>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.facebook.com/satya.sahoo.73"><span class="fa fa-facebook" aria-hidden="true"></span></a></li>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://www.instagram.com/the_white_wolverine/"><span class="fa fa-instagram" aria-hidden="true"></span></a></li>
 						<li class="mr-sm-3 mr-2 icons"><a href="https://github.com/thewhitewolverine"><span class="fa fa-github" aria-hidden="true"></span></a></li>
 						<li class=" icons"><a href="https://www.quora.com/profile/Satya-Sahoo-28"><span class="fa fa-quora" aria-hidden="true"></span></a></li>
-						
+
 					</ul>
 				</div>
 			</div>
